--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ form button {
     font-weight: normal;
 }
 
-body {
+body, input, textarea {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -37,7 +37,7 @@ header nav li a {
 .container {
     max-width: 1280px;
     width: 100%;
-    margin: 0 auto;
+    margin: 0 auto ;
 }
 
 header .container,
@@ -47,11 +47,11 @@ section .container {
     justify-content: space-between;
 }
 
-.brands-list {
+.brands-list img {
     height: 24px;
 }
 
-.brands-list {
+.brands-list li {
     display: inline;
     margin-right: 8px;
 }
@@ -112,6 +112,7 @@ form button {
 
 form textarea {
     resize: none;
+    height: 180px;
 }
 
 section h3 {
@@ -120,10 +121,21 @@ section h3 {
 
 form button {
     background-color: #182c61;
-    color: #fff;
-    border: nome;
+    color: #ecf0f1;
+    border: none;
+    cursor: pointer;
 }
 
 form button:hover {
     background-color: #314e9e;
+}
+
+input:focus, textarea:focus {
+    outline-color: #182c61;
+}
+
+footer {
+    background-color: #182c61;
+    color: #ecf0f1;
+    padding: 16px 0;
 }
